--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -24,6 +24,10 @@ aiofiles==23.2.1
 numpy>=1.24.0
 pandas>=2.0.0
 
+# File Processing
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+
 # Development
 pytest==7.4.3
 pytest-asyncio==0.21.1
