--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,7 +3,7 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 
-# AI/ML - Grok Integration
+# AI/ML - Grok/OpenAI Integration
 openai>=1.0.0
 tiktoken>=0.5.0
 
@@ -11,7 +11,7 @@ tiktoken>=0.5.0
 pydantic>=2.0.0
 pydantic-settings>=2.0.0
 
-# Database
+# Database Drivers (Preserving all for compatibility)
 motor==3.3.2
 redis[asyncio]==5.0.1
 neo4j==5.14.0
@@ -28,7 +28,7 @@ pandas>=2.0.0
 PyPDF2>=3.0.0
 python-docx>=0.8.11
 
-# Development
+# Testing & Quality Code (Keep these for the repo's CI/CD)
 pytest==7.4.3
 pytest-asyncio==0.21.1
 black==23.11.0
