validate fixed working properly

--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -6,6 +6,9 @@ python-multipart==0.0.6
 # AI/ML - Grok/OpenAI Integration
 openai>=1.0.0
 tiktoken>=0.5.0
+langchain>=0.1.0
+langchain-groq>=0.1.0
+langchain-core>=0.1.0
 
 # Data Validation
 pydantic>=2.0.0
