--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,7 @@
     "react-force-graph-2d": "^1.29.1",
     "react-router-dom": "^7.12.0",
     "tailwind-merge": "^3.4.0",
-    "three": "^0.182.0"
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
